generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Deal {
  id       String @id @default(cuid())
  sellerId String
  seller   User   @relation(fields: [sellerId], references: [id], name: "seller", onDelete: Cascade, onUpdate: Cascade)

  customerId String
  customer   User   @relation(fields: [customerId], references: [id], name: "customer", onDelete: Cascade, onUpdate: Cascade)

  items Cartitem[]

  purchase   Purchase? @relation(fields: [purchaseId], references: [id])
  purchaseId String?
}

model Cartitem {
  id            String         @id @default(cuid())
  productId     String
  product       Product        @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  quantity      Int
  customer      String // this is an id
  refundrequest Refundrequest?
  deal          Deal?          @relation(fields: [dealId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  dealId        String?
}

model Bank {
  id         String @id @default(cuid())
  cardExpire String
  cardNumber String
  cardType   String
  currency   String
  iban       String
  user       User?
}

model Refundrequest {
  id         String   @id @default(cuid())
  purchaseId String
  productId  String
  body       String
  reason     String
  cartItemId String   @unique
  cartItem   Cartitem @relation(fields: [cartItemId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  timeStamp  DateTime

  // totalPrice Float

  // product Product @relation(fields: [productId], references: [id])
}

model Purchase {
  id          String @id @default(cuid())
  deals       Deal[]
  total_price Float
  timeStamp   String
}

model Comment {
  id        String   @id @default(cuid())
  body      String
  // postId    String // todo what's a post
  productId String
  timestamp DateTime
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId    String
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}

model Address {
  id         String  @id @default(cuid())
  address    String
  city       String
  postalCode String
  state      String
  name       String
  // userId     String
  // User       User   @relation(fields: [userId], references: [id])
  user       User?   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId     String?
}

model Image {
  id        String  @id @default(cuid())
  url       String
  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}

model User {
  id            String          @id @default(cuid())
  firstName     String
  lastName      String
  email         String          @unique
  password      String
  image         String?
  bank          Bank?           @relation(fields: [bankId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  bankId        String?         @unique
  role          String
  balance       Int             @default(0)
  addresses     Address[]
  comments      Comment[]
  product       Product[]
  refundrequest Refundrequest[]
  sellerDeals   Deal[]          @relation("seller")
  customerDeals Deal[]          @relation("customer")
}

model Product {
  id                 String     @id @default(cuid())
  title              String
  description        String
  price              Float // todo float
  discountPercentage Float      @default(0)
  rating             Float
  stock              Int
  brand              String
  category           String
  thumbnail          String
  seller             User       @relation(fields: [sellerId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  sellerId           String
  images             Image[]
  cartItems          Cartitem[]
  comments           Comment[]
}
