//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Deal {
  id String [pk]
  sellerId String [not null]
  seller User [not null]
  customerId String [not null]
  customer User [not null]
  items Cartitem [not null]
  purchase Purchase
  purchaseId String
}

Table Cartitem {
  id String [pk]
  productId String [not null]
  product Product [not null]
  quantity Int [not null]
  customer String [not null]
  refundrequest Refundrequest
  deal Deal
  dealId String
}

Table Bank {
  id String [pk]
  cardExpire String [not null]
  cardNumber String [not null]
  cardType String [not null]
  currency String [not null]
  iban String [not null]
  user User
}

Table Refundrequest {
  id String [pk]
  purchaseId String [not null]
  productId String [not null]
  body String [not null]
  reason String [not null]
  cartItemId String [unique, not null]
  cartItem Cartitem [not null]
  userId String [not null]
  user User [not null]
  timeStamp DateTime [not null]
}

Table Purchase {
  id String [pk]
  deals Deal [not null]
  total_price Float [not null]
  timeStamp String [not null]
}

Table Comment {
  id String [pk]
  body String [not null]
  productId String [not null]
  timestamp DateTime [not null]
  user User [not null]
  userId String [not null]
  product Product [not null]
}

Table Address {
  id String [pk]
  address String [not null]
  city String [not null]
  postalCode String [not null]
  state String [not null]
  name String [not null]
  user User
  userId String
}

Table Image {
  id String [pk]
  url String [not null]
  productId String [not null]
  product Product [not null]
}

Table User {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  image String
  bank Bank
  bankId String [unique]
  role String [not null]
  balance Int [not null, default: 0]
  addresses Address [not null]
  comments Comment [not null]
  product Product [not null]
  refundrequest Refundrequest [not null]
  sellerDeals Deal [not null]
  customerDeals Deal [not null]
}

Table Product {
  id String [pk]
  title String [not null]
  description String [not null]
  price Float [not null]
  discountPercentage Float [not null, default: 0]
  rating Float [not null]
  stock Int [not null]
  brand String [not null]
  category String [not null]
  thumbnail String [not null]
  seller User [not null]
  sellerId String [not null]
  images Image [not null]
  cartItems Cartitem [not null]
  comments Comment [not null]
}

Ref: Deal.sellerId > User.id [delete: Cascade]

Ref: Deal.customerId > User.id [delete: Cascade]

Ref: Deal.purchaseId > Purchase.id

Ref: Cartitem.productId > Product.id [delete: Cascade]

Ref: Cartitem.dealId > Deal.id [delete: Cascade]

Ref: Refundrequest.cartItemId - Cartitem.id [delete: Cascade]

Ref: Refundrequest.userId > User.id [delete: Cascade]

Ref: Comment.userId > User.id [delete: Cascade]

Ref: Comment.productId > Product.id [delete: Cascade]

Ref: Address.userId > User.id [delete: Cascade]

Ref: Image.productId > Product.id [delete: Cascade]

Ref: User.bankId - Bank.id [delete: Cascade]

Ref: Product.sellerId > User.id [delete: Cascade]